force-app/main/default/objects/parameterized_transfer_type__mdt/parameterized_transfer_type__mdt.object-meta.xml
<CustomObject>
    <label>parameterized transfer type</label>
    <pluralLabel>parameterized transfer types</pluralLabel>
</CustomObject>