force-app/main/default/objects/parameterized_transfer_type__mdt/fields/CHK_PTT_DomesticTransferMultiple__c.field-meta.xml
<CustomField>
    <fullName>CHK_PTT_DomesticTransferMultiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Transfer Multiple</label>
    <type>Checkbox</type>
</CustomField>