force-app/main/default/objects/parameterized_transfer_type__mdt/fields/CHK_PTT_InstantTransfer__c.field-meta.xml
<CustomField>
    <fullName>CHK_PTT_InstantTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instant Transfer</label>
    <type>Checkbox</type>
</CustomField>