force-app/main/default/objects/parameterized_transfer_type__mdt/fields/CHK_PTT_InternationalTransferMultiple__c.field-meta.xml
<CustomField>
    <fullName>CHK_PTT_InternationalTransferMultiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Transfer Multiple</label>
    <type>Checkbox</type>
</CustomField>