force-app/main/default/objects/parameterized_transfer_type__mdt/fields/PCK_PTT_UserCountry__c.field-meta.xml
<CustomField>
    <fullName>PCK_PTT_UserCountry__c</fullName>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>