force-app/main/default/objects/parameterized_transfer_type__mdt/fields/PCK_PTT_UserType__c.field-meta.xml
<CustomField>
    <fullName>PCK_PTT_UserType__c</fullName>
    <label>User Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MULTI_ONE_TRADE</fullName>
                <default>true</default>
                <label>MULTI_ONE_TRADE</label>
            </value>
            <value>
                <fullName>NEXUS</fullName>
            </value>
            <value>
                <fullName>LOCAL_BANKING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>