force-app/main/default/objects/parameterized_transfer_type__mdt/listViews/parameterized_transfer_types.listView-meta.xml
<ListView>
    <fullName>parameterized_transfer_types</fullName>
    <columns>MasterLabel</columns>
    <columns>PCK_PTT_UserCountry__c</columns>
    <columns>PCK_PTT_UserType__c</columns>
    <columns>CHK_PTT_InstantTransfer__c</columns>
    <columns>CHK_PTT_InternationalTransferSingle__c</columns>
    <columns>CHK_PTT_InternationalTransferMultiple__c</columns>
    <columns>CHK_PTT_DomesticTransferSingle__c</columns>
    <columns>CHK_PTT_DomesticTransferMultiple__c</columns>
    <filterScope>Everything</filterScope>
    <label>parameterized transfer types</label>
    <language>en_US</language>
</ListView>